--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,8 +26,10 @@
 
                 <com.songjachin.mwanandroid.customview.MyBanner
                     android:id="@+id/my_banner"
+                    android:background="@color/colorPrimary"
                     android:layout_width="match_parent"
-                    android:layout_height="180dp"/>
+                    android:layout_height="180dp"
+                    android:padding="10dp" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/home_recycler"
