--- a/app/src/main/res/layout/layout_my_banner.xml
+++ b/app/src/main/res/layout/layout_my_banner.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.songjachin.mwanandroid.customview.LoopViewPager
         android:id="@+id/content_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="800dp" />
 
     <TextView
         android:id="@+id/content_title"
@@ -16,8 +17,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:text="@string/looper_view_title"
         android:textAlignment="center"
         android:textColor="#232320"
